# Rust-REST-API-Data-Fetcher

./: AI Prompt Journal.docx  Cargo.toml  Github ReadMe.docx  README.md  project toolkit.docx
src/: main.rs
