[package]
name = "rust-api-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest: The tool to make network requests.
# "blocking" = simplifies code (synchronous). "json" = allows parsing.
reqwest = { version = "0.12", features = ["blocking", "json"] }

# serde: The tool to read JSON data.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"